Bug 1574986 - Report count of GC slices r=jonco

Depends on D42534

Differential Revision: https://phabricator.services.mozilla.com/D42535